# rust-e2e-test-poc

./: .env.sample  .env.test  .gitignore  Cargo.toml  biome.json  compose.yaml  package-lock.json  package.json  readme.md  tsconfig.json  vite.config.js  vite.config.ts
.github/workflows/: e2e-and-integration-tests.yaml  pipeline.yaml  unit-tests.yaml
migrations/: 20250419004604_create_todos_table.up.sql  20250419072820_rename_todo_description_field_to_content.down.sql  20250419072820_rename_todo_description_field_to_content.up.sql
src/: lib.rs  main.rs
src/common/: error.rs  mod.rs  paginated_fetch.rs
src/config/: datastore.rs  inertia.rs  mod.rs  options.rs  server.rs  vite.rs
src/domain/entities/: todo.rs
src/domain/repositories/: mod.rs  todos_repository.rs
src/infra/: mod.rs
src/infra/http/: mod.rs
src/infra/sessions/: file_session.rs  helpers.rs  mod.rs
src/test_utils/fixtures/: _loaded_options.rs  mod.rs
src/www/layouts/: default.tsx
tests/common/: datastore_guard.rs  mod.rs  setup.rs  testing_app.rs
tests/common/fixtures/: datastore.rs  inertia.rs  mod.rs
tests/common/helpers/: mod.rs
tests/controllers/: mod.rs  todos_controller.rs
tests/controllers/todos/: create.rs  index.rs
www/: app.tsx  index.css  root.hbs
www/components/: alert.tsx  button.tsx  checkbox-tooltip.tsx  h1.tsx  main.tsx  nav-item.tsx
www/layouts/: default.tsx
www/pages/: index.tsx  new.tsx
www/types/: paginated-entity-set.d.ts  pagination.d.ts
www/ui/: filter-by-completed-status-checkbox.tsx  todo-listing-card.tsx
www/utils/: pagination.ts
(+26 files in other folders)
