[package]
name = "e2e-test-poc"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
inertia-rust = {version = "2.4.3", features = ["actix", "vite-hbs-template-resolver", "actix-validator"]}
vite-rust = "0.2"
serde_json = "1"
actix-files = "0.6"
serde = "1"
dotenvy = "0.15.7"
validator = {version = "0.20", features = ["derive"]}
anyhow = "1"
thiserror = "2"
actix-session = "0.10"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11.5"
log = "0.4"
async-trait = "0.1"
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "tls-rustls-ring-native-roots",
  "postgres",
  "derive",
  "macros",
  "migrate",
  "chrono"
]}
tokio = {version = "1.44", features = ["fs", "io-std", "test-util", "rt", "rt-multi-thread", "macros"]}

[dev-dependencies]
pretty_assertions = "1"
rstest = "0.25"
